# second-brain

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
secondbrain/: __init__.py
secondbrain/cli/: __main__.py
secondbrain/cli/commands/: connect.py  daemon.py  identity.py  info.py  init.py  items.py  mcp.py  migrate_from_v2.py  people.py  projects.py  scan.py  status.py  web.py
secondbrain/connectors/: __init__.py  base.py  registry.py  secrets.py
secondbrain/core/: __init__.py  wiki.py  work_items.py  workspace.py
secondbrain/daemon/: __init__.py  registry.py  server.py  state.py
secondbrain/daemon/jobs/: aging_commitments.py  morning_brief.py
secondbrain/mcp/: __init__.py  server.py
secondbrain/web/: __init__.py  app.py
secondbrain/web/templates/: base.html  briefing.html  briefings.html  commitments.html  connectors.html  daemon.html  dashboard.html  people.html  person.html
tests/: test_aging_commitments.py  test_cli_items.py  test_connectors.py  test_daemon.py  test_evidence_search.py  test_launchd_install.py  test_mcp_tools.py  test_promises.py  test_scan.py  test_smoke.py  test_web.py
